--- a/css/index.css
+++ b/css/index.css
@@ -751,6 +751,7 @@ ul, li {
     background: #DCF8FF;
     border-radius: 5px;
     color: #5B98D3;
+    cursor: pointer;
     display: inline-block;
     font-size: 14px;
     font-weight: bold;
@@ -760,7 +761,7 @@ ul, li {
     overflow: hidden;
     position: relative;
     text-align: center;
-    width: 124px; }
+    width: 100px; }
     .status_switch li.active {
       color: #FF5C00; }
       .status_switch li.active:before {
@@ -920,6 +921,10 @@ ul, li {
   padding: 40px 25px 20px 35px;
   width: 100%; }
   #job-seeker_list.online .job-seeker_item.offline {
+    display: none !important; }
+  #job-seeker_list.offline .job-seeker_item:not(.offline) {
+    display: none !important; }
+  #job-seeker_list.posted .job-seeker_item:not(.posted) {
     display: none !important; }
   #job-seeker_list .job-seeker_item {
     background: #FFF;
