--- a/css/index.css
+++ b/css/index.css
@@ -952,6 +952,18 @@ ul, li {
           display: none; }
         #job-seeker_list .job-seeker_item.offline .chat-now.offline {
           display: block; }
+    #job-seeker_list .job-seeker_item.posted:after {
+      background: #FFB154;
+      border-radius: 0 0 5px 0;
+      color: #FFF;
+      content: '已投递';
+      display: block;
+      font-size: 12px;
+      left: 0;
+      position: absolute;
+      text-align: center;
+      top: 0;
+      width: 4em; }
     #job-seeker_list .job-seeker_item .avatar {
       height: 80px;
       left: 20px;
