Add 增加了离线状态和离线消息自动回复的功能 Noti 记得DEBUG的要关掉

--- a/css/index.css
+++ b/css/index.css
@@ -1687,3 +1687,34 @@ ul, li {
     margin-right: 114px; }
   #login__dialog .login__dialog__panel .login__dialog__link:hover {
     filter: drop-shadow(1px 1px 1px #C0C0C0); }
+
+.afk-message {
+  background-color: #FFF;
+  background-image: none;
+  border: 1px solid #DCDFE6;
+  border-radius: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #606266;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 12px;
+  height: 40px;
+  line-height: 40px;
+  margin-bottom: -1px;
+  outline: 0;
+  padding: 0 15px;
+  -webkit-transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  width: 100%; }
+  .afk-message:first-of-type {
+    border-radius: 4px 4px 0 0; }
+  .afk-message:hover {
+    background-color: #458FFC;
+    color: #FFF; }
+
+.afk-customize-message .el-input__inner {
+  border-radius: 0 0 0 4px; }
+
+.afk-customize-message .el-input-group__append {
+  border-radius: 0 0 4px 0; }
