--- a/css/index.css
+++ b/css/index.css
@@ -1256,11 +1256,12 @@ ul, li {
   #person-info_panel .name,
   #company-info_panel .name {
     color: #FFF;
-    font-size: 16px;
+    font-size: 22px;
     font-weight: bold;
     left: 85px;
     line-height: 25px;
     position: absolute;
+    text-shadow: 2px 1px #9e9e9e;
     top: 0; }
   #person-info_panel .view-message,
   #company-info_panel .view-message {
