--- a/css/index.scss
+++ b/css/index.scss
@@ -235,6 +235,16 @@
       white-space:   nowrap;
     }
 
+    .VIP_flag {
+      background:      url(../images/icon_vip.png) no-repeat center center;
+      background-size: contain;
+      height:          32px;
+      position:        absolute;
+      right:           0;
+      top:             5px;
+      width:           32px;
+    }
+
     &:before {
       background:      url(../images/company_item_title_icon.png) no-repeat center center;
       background-size: 100%;
