--- a/css/index.scss
+++ b/css/index.scss
@@ -363,6 +363,7 @@
     position:    absolute;
     text-align:  center;
     width:       100%;
+    cursor:      pointer;
 
     &.offline {
       background: linear-gradient(180deg, #D8D8D8 0%, #B5B5B5 8.85%, #B5B5B5 52.08%, #B5B5B5 89.58%, #979797 100%);
@@ -1829,5 +1830,29 @@
 
   .el-input-group__append {
     border-radius: 0 0 4px 0;
+  }
+}
+
+
+//和企业聊天二维码
+#qrcode2Company_dialog {
+  #qrcode2Company__panel {
+    #qrcode2Company {
+      margin:     0 auto;
+      text-align: center;
+
+      img {
+        margin: 0 auto;
+      }
+    }
+
+    > .text {
+      width:  256px;
+      margin: 0 auto;
+      padding-top: 1em;
+      span {
+        color: #F00;
+      }
+    }
   }
 }
